--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,15 +13,18 @@
     "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
     "@tabler/icons-react": "^3.26.0",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.1",
     "tailwind-merge": "^2.6.0",
     "three": "^0.172.0",
-    "three-globe": "^2.39.1"
+    "three-globe": "^2.39.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
