--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tabler/icons-react": "^3.26.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "elevate": "file:..",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
