--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.6.0",
     "three": "^0.172.0",
     "three-globe": "^2.39.1",
